# astro-lab

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COSMIC_WEB_COMPLETE_ANALYSIS.md  COSMIC_WEB_README.md  DOCUMENTATION_REVIEW_SUMMARY.md  IMPORT_CLEANUP_SUMMARY.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PYPI_SETUP.md  README.md  README_astrolab_widget.md  TEST_CLEANUP_PLAN.md  TEST_CLEANUP_SUMMARY.md  TNG50_FIXES_SUMMARY.md  TODO.md  astro_lab_main_features.md  astronomical_workflow.blend  benchmark_tng50.py  demo_astrolab_widget.py  demo_tensor_integration.py  deng.md  exoplanets_config.yaml  full_dataset_test.py  mkdocs.yml  multi_survey_config.yaml  mypy.ini  process_cosmic_web.py  process_exoplanet_cosmic_web.py  process_nsa_cosmic_web.py  process_satellite_cosmic_web.py  pyproject.toml  pytest.ini  quick_test.py  ruff.toml  run_astrolab_ui.py  run_ui.py  satellites_config.yaml  setup.ps1  (+24 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  WORKFLOW_VALIDATION.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: astrophysics-expert.agent.md  cli-developer.agent.md  cosmic-web-analyst.agent.md  data-scientist.agent.md  devops-specialist.agent.md  gnn-architect.agent.md  performance-optimizer.agent.md  survey-integration-specialist.agent.md  tensor-operations.agent.md  test-engineer.agent.md  visualization-expert.agent.md
.github/copilot/: agents.yaml
.github/workflows/: ai-agent.yml  auto-fix-security.yml  ci.yml  data-pipeline.yml  docs.yml  monitor-actions-usage.yml  publish-pypi.yml  security.yml  train-model.yml  validate-workflows.yml
astro-lab-ml/: pyproject.toml
astro-lab-ml/src/astro_lab_ml/: __init__.py
astro-pack/: README.md  pyproject.toml
astro-pack/src/astro_pack/: __init__.py
astro-torch/: pyproject.toml
astro-torch/src/astro_torch/: __init__.py
astro-torch/src/astro_torch/data/: __init__.py  datasets.py  loaders.py  manager.py  transforms.py
astro-viz/: README.md  pyproject.toml
astro-viz/src/astro_viz/: __init__.py
checkpoints/: 00-1.1092.ckpt  last.ckpt  model_epoch00_valloss1_111.ckpt
checkpoints/astro_experiment/: best-00-3.98.ckpt  last.ckpt
configs/: albpy.yaml  cosmic_web_training.yaml  data.yaml  default.yaml  gaia_optimization.yaml  gaia_realistic_training.yaml  hpo.yaml  mlflow.yaml  model.yaml  surveys.yaml  tasks.yaml  training.yaml  training_config.yaml
configs/surveys/: gaia.yaml  nsa.yaml  sdss.yaml
docker/: Dockerfile  docker-compose.yaml  start.sh
docs/: COSMIC_WEB_ANALYSIS.md  COSMOGRAPH_INTEGRATION.md  DATA_LOADERS.md  DEVGUIDE.md  EXOPLANET_COSMIC_WEB.md  EXOPLANET_PIPELINE.md  GAIA_COSMIC_WEB.md  GITHUB_PAGES_SETUP.md  MEMORY_MANAGEMENT.md  NSA_COSMIC_WEB.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  api.md  architecture_overview.html  architecture_overview.md  astro_lab_main_features.txt  astro_lab_ml_cheat_sheet.md  astrolab-architecture.mermaid  cosmic_web_guide.md  explainability_guide.md  generate_docs.py  gpu_optimization_summary.md  hpo_guide.md  index.md  performance_guide.md  survey_preprocessing_overview.md  surveys_overview.md  tensordict_integration_analysis.md  training_optimizations_2025.md
docs/api/: astro_lab.cli.md  astro_lab.config.md  astro_lab.data.datasets.md  astro_lab.data.graphs.md  astro_lab.data.md  astro_lab.md  astro_lab.models.components.md  astro_lab.models.core.md  astro_lab.models.lightning.md  astro_lab.models.md  astro_lab.tensors.md  astro_lab.training.md  astro_lab.ui.md  astro_lab.ui.modules.md  astro_lab.utils.md  astro_lab.widgets.albpy.advanced.md  astro_lab.widgets.albpy.md  astro_lab.widgets.bpy.advanced.md  astro_lab.widgets.bpy.md  astro_lab.widgets.md
docs/assets/: custom.css
docs/auto/: __init__.py  cli.py  generator.py  utils.py
docs/generated_datasets/: astronomical_compact.md  base_compact.md  exoplanets_compact.md  satellites_compact.md  spectroscopy_compact.md  time_series_compact.md
docs/generated_models/: astrophot_models_compact.md  tgnn_compact.md
docs/generated_structured/: README.md  datasets_compact.md  encoders_compact.md  graph_utils_compact.md  grease_pencil_3d_compact.md  lightcurve_compact.md  lightning_module_compact.md  loader_compact.md  loaders_compact.md  mesh_compact.md  (+8 more)
examples/: README.md  astro_operators_demo.py  astroquery_demo.py  astroquery_example.py  bidirectional_bridge_demo.py  blender_widget_example.py  blender_widget_usage.py  contextlib_memory_example.py  fits_image_example.py  fits_optimization_demo.py  futuristic_visualization_demo.py  helper.py  live_tensor_demo.py  modern_data_analysis.py  nsa_processing_example.py  preprocess_and_combine_surveys.py  quick_start.py  simple_cosmograph_demo.py  simple_widget_example.py  train_gaia_classifier.py  train_gaia_real_data.py  ui_demo.py
old_docs/: CONTEXTLIB_MEMORY_MANAGEMENT.md  COSMIC_WEB_ANALYSIS.md  COSMOGRAPH_INTEGRATION.md  DATA_LOADERS.md  EXOPLANET_COSMIC_WEB.md  GAIA_COSMIC_WEB.md  NSA_COSMIC_WEB.md
scripts/: check_datasets.py  download_all_gaia.py  process_exoplanet_cosmic_web.py  process_gaia_cosmic_web.py  process_gaia_data.py  process_linear_cosmic_web.py  process_nsa_cosmic_web.py  process_satellite_cosmic_web.py  process_tng_cosmic_web.py  run_tests.py  setup.sh  setup_numpy2_compat.ps1  test.bat  uv_commands.md  workflow_commands.sh
site/: 404.html  generate_docs.py  index.html  objects.inv  sitemap.xml
test/: README.md  __init__.py  conftest.py  test_cli.py  test_config_integration.py  test_cosmic_web.py  test_cosmograph.py  test_cuda.py  test_data.py  test_data_module.py  test_data_pipeline.py  test_dataset_pt_file.py  test_graph_consolidation.py  test_integration.py  test_lightning.py  test_models.py  test_performance_optimizations.py  test_preprocessing.py  test_real_data_processing.py  test_refactored_tensors.py  test_render.py  test_samplers.py  test_simple_training.py  test_simulation.py  test_tensordict_conversion.py  test_tensors.py  test_training.py  test_training_fix.py  test_ui.py
tests/: test_graph_building_improvements.py
(+605 files in other folders)
