[project]
name = "astro-lab"
version = "0.1.0"
description = "Astronomical Machine Learning Laboratory with MLflow tracking"
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "bjoern.bethge@gmail.com" }
]
maintainers = [
    { name = "Björn Bethge", email = "bjoern.bethge@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core astronomical libraries
    "astroml>=1.0.2.post1",
    # "astrophot>=0.16.13",  # Temporarily disabled - not compatible with numpy 2.0 yet
    "cosmograph>=0.0.47",
    "h5py>=3.8.0", # For TNG50/IllustrisTNG HDF5 files
    # 3D Visualization and data exchange
    "pyvista>=0.45.2",
    # Machine Learning
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    # Marimo and MLflow 
    "marimo-flow>=0.1.1",
    "torchinfo>=1.8.0",
    "bpy>=4.4.0", # Blender Python API
    "bvh>=0.3",
    "anywidget>=0.9.18",
    "traitlets>=5.14.3",
    "pydantic>=2.11.6",
    "pyyaml>=6.0.2",
    "lightning==2.5.1.post0",
    "torchmetrics==1.6.3",
    "optuna>=4.4.0",
    "optuna-integration[pytorch-lightning]>=4.4.0",
    "plotly>=6.1.2",
    "lightning-utilities==0.14.3",
    "markupsafe>=3.0.2",
    "astrophot>=0.16.13",
    "open3d>=0.19.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

# Development dependency groups (PEP 735)
[dependency-groups]
# Core development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "psutil>=6.1.0",
    "pytest-xdist>=3.7.0",
    "pytest-timeout>=2.0.0", # Test timeouts
    "pytest-rerunfailures>=12.0", # Retry failed tests
    "psutil>=6.1.0",
    "gputil>=1.4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

optim = [
    "optuna>=4.4.0",
]

astro = [
    "astroml>=1.0.2.post1",
    "astrophot>=0.16.13",
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "poliastro>=0.7.0",
    "sdss-access>=3.0.8",
    "sgp4>=2.24",
    "numpy>=1.24,<2.0",  # Compatible with pandas and sklearn
]

# PyTorch with CUDA support
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]

# Console scripts for CLI tools
[project.scripts]
astro-lab = "astro_lab.cli.__main__:main"
astro-test = "scripts.run_tests:main"
