[project]
name = "astro-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "bjoern.bethge@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astroml>=1.0.2.post1",
    "astropy>=7.1.0",
    "polars>=1.30.0",
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
