[project]
name = "astro-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "bjoern.bethge@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "bpy>=4.4.0",
    "pyvista>=0.45.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
